--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ts-template",
+  "name": "classickartan",
   "version": "1.0.0",
   "description": "javascript dj app",
   "main": "src/index.js",
