--- a/package.json
+++ b/package.json
@@ -22,5 +22,9 @@
     "typescript": "^5.1.6",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4"
+  },
+  "dependencies": {
+    "@types/leaflet": "^1.9.12",
+    "leaflet": "^1.9.4"
   }
 }
